# cpp-samples

cloud-run-hello-world/: .gitignore  CMakeLists.txt  Dockerfile  cloud_run_hello.cc
cloud-run-hello-world/headers/: utils.h
cloud-run-hello-world/src/: cloud_run_hello.cpp  hello_world.cpp
cloud-run-hello-world/tests/: simple_test.cpp  simple_test2.cpp
